# my-ws-chat

./: .gitignore  Cargo.toml  Dockerfile
.sqlx/: query-398ff590594d4184c91730f171a5c62d747a6e2174d031bd6d72376f567325b6.json  query-3b6a5e710a13377246df42af55abad744eca2c1e719630acff18a42db8d12498.json  query-43af27d533baf787c6d670f37d5848f5822e65741d33a1d7daf56ccc3e3cacab.json  query-43b144dfaed97ee4be920d7d4f4dd473b0697b2070a65f4c6c92c1e7669ed1e8.json  query-5d0f16f1ecd1a6245b32a55e77b0734fbebe59a0daa6b1f9c2f91fd5d6dc5702.json  query-6548a1c733d1fa98c69518517a52e09a60dd6d432639882e65fa68cb35ce8a59.json  query-670f1a28c845c5dd6043cee0f1491912ea9cc177bfd3004516cd205886f5528a.json  query-68170f7fe964d019201d6009557360a671ae4afec88be1119493bb43f580f3f0.json  query-7ad1df1e536185bb66128aa482fc4630bf2615b6b7570e6dc183187b63465dc5.json  query-824d9428b71c6ced20cb42fa35f0972ea34dd3f115943ff3d5f6159865af78cf.json  query-9c76894088708109caaab9753209e34071458763514530c6c02debb00dda55f4.json  query-a1e716d421a1de576f65c5c8d6ea9989cf48dd0ce512e72e6268877c61cd5e0c.json  query-a8d2621a7afb8ebc75995792e5535cc4a809d94a1ad4f147fb1d25c16267d27b.json  query-c12c5947538b9a3e0d81ea2a75839a1df667736e658e4f8417630d7e66790e54.json
client/: client.py
client/android/: settings.gradle
client/rust-client/: Cargo.toml
client/rust-client/src/: main.rs
migrations/: 20230626192115_create_messages_table.sql  20230717150601_create_users_table.sql  20240707111324_add_received_column_to_messages.sql
src/: auth.rs  chat.rs  main.rs  messages.rs  notifications.rs  users.rs
(+24 files in other folders)
