[package]
name = "my-web-socket-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["ws"]}
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { "version" = "0.6.3", "features" = ["runtime-actix-native-tls", "postgres"]}
tokio = { version = "1.0", features = ["full"] }

