[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio-tungstenite = "0.20"
tokio = { version = "1.29.1", features = ["full"]}
futures-util = "0.3.28"
